# grokking_fp

./: .editorconfig  .gitignore  README.md  Taskfile.yaml  flake.nix  main.py  pyproject.toml
docs/: CODING_GUIDELINES.md  PROGRESS.md
src/main/: __init__.py  ch01_intro.py  ch02_shopping_cart_discounts.py  ch02_tip_calculation.py
src/other/: ch01_intro.clj
src/scala/: Ch01Intro.scala
