[project]
name = "grokking-fp"
version = "0.1.0"
description = "Code exercises for Grokking Functional Programming."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-lft-mcp",
    "returns>=0.26.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
python_version = "3.13"

[tool.ruff]
fix = true
line-length = 79
exclude = [".venv"]
src = ["src", "tests"]
target-version = "py313"

# Group violations by containing file.
output-format = "grouped"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "S", "B", "A", "C4", "SIM", "RUF"]
ignore = ["D203", "D213", "S101"]

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv.sources]
python-lft-mcp = { git = "https://github.com/Agent-Hellboy/python-lft-mcp.git" }

[tool.ruff.lint.pydocstyle]
convention = "numpy"
